; ModuleID = '/home/carl/AnghaBench/nanomsg/src/devices/extr_device.c_nn_device_oneway.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/devices/extr_device.c_nn_device_oneway.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_device_recipe = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_device_oneway(%struct.nn_device_recipe* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nn_device_recipe*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.nn_device_recipe* %0, %struct.nn_device_recipe** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  br label %8

8:                                                ; preds = %3, %19
  %9 = load %struct.nn_device_recipe*, %struct.nn_device_recipe** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @nn_device_mvmsg(%struct.nn_device_recipe* %9, i32 %10, i32 %11, i32 0)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp slt i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i64 @nn_slow(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %8
  ret i32 -1

19:                                               ; preds = %8
  br label %8
}

declare dso_local i32 @nn_device_mvmsg(%struct.nn_device_recipe*, i32, i32, i32) #1

declare dso_local i64 @nn_slow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
